--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_policy(SET CMP0016 NEW)
 project(parallel_executor VERSION 1.0.0 DESCRIPTION "Синхронизация нескольких потоков исполнения через очередь сообщений на C++")
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
+add_executable(${PROJECT_NAME} src/parallel_executor/main.cpp)
 
 enable_testing()
-add_subdirectory(test)
+if (BUILD_TESTING)
+    add_subdirectory(test)
+endif ()
