Refactor project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,33 @@ cmake_policy(SET CMP0016 NEW)
 project(parallel_executor VERSION 1.0.0 DESCRIPTION "Синхронизация нескольких потоков исполнения через очередь сообщений на C++")
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
-file(GLOB Device_Event_SRC
-        "src/parallel_executor/Device_Event/*.h"
-        "src/parallel_executor/Device_Event/*.cpp"
+file(GLOB Device_SRC
+        "src/parallel_executor/Device/*.h"
+        "src/parallel_executor/Device/*.cpp"
         )
-add_library(device ${Device_Event_SRC})
+file(GLOB Event_SRC
+        "src/parallel_executor/Event/*.h"
+        "src/parallel_executor/Event/*.cpp"
+        )
+file(GLOB EventQueue_SRC
+        "src/parallel_executor/EventQueue/*.h"
+        "src/parallel_executor/EventQueue/*.cpp"
+        )
+
+add_library(device ${Device_SRC})
+add_library(event ${Event_SRC})
+add_library(eventQueue ${EventQueue_SRC})
 
 add_executable(${PROJECT_NAME} src/parallel_executor/main.cpp)
-target_include_directories(${PROJECT_NAME} PUBLIC src/parallel_executor/Device_Event)
-target_link_libraries(${PROJECT_NAME} device)
+
+target_include_directories(eventQueue PUBLIC src/parallel_executor/Event)
+target_include_directories(event PUBLIC src/parallel_executor/Device)
+target_include_directories(${PROJECT_NAME} PUBLIC
+        src/parallel_executor/Device
+        src/parallel_executor/Event
+        src/parallel_executor/EventQueue)
+
+target_link_libraries(${PROJECT_NAME} device event eventQueue)
 
 enable_testing()
 if (BUILD_TESTING)
